--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 sudo: false
 language: clojure
-lein: lein2
+lein: lein
 jdk:
     - openjdk7
     - oraclejdk7
 branches:
   except:
     - gh-pages
-                
